--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 #canvas1 {
     border: 5px solid black;
+    position: absolute;
+    top: 1000px;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 256px;
