tried chat gpt css to clear up spacing

--- a/style.css
+++ b/style.css
@@ -1,29 +1,35 @@
-#canvas1 {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    line-height: 1;
+}
+
+#canvas1, #canvas2, #canvas3 {
     border: 5px solid black;
     position: absolute;
-    top: 400px;
     left: 50%;
-    
+    transform: translateX(-50%); /* Optional for centering horizontally */
     width: 256px;
     height: 256px;
+}
+
+#canvas1 {
+    top: 400px;
 }
 
 #canvas2 {
-    border: 5px solid black;
-    position: absolute;
     top: 700px;
-    left: 50%;
-    width: 256px;
-    height: 256px;
 }
 
 #canvas3 {
-    border: 5px solid black;
-    position: absolute;
     top: 1000px;
-    left: 50%;
-    width: 256px;
-    height: 256px;
 }
 
 #helloWorldButton {
